fix white space on events pages

--- a/web/src/Pages/EventsPage/EventsPage.css
+++ b/web/src/Pages/EventsPage/EventsPage.css
@@ -11,6 +11,7 @@
 
 .featured__event { 
     position: relative;
+    top: 15px;
     width: 100%; 
     height: 500px; 
     text-align: left;
